--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -33,16 +33,24 @@ html, body {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-color: #000;
     z-index: 10;
     opacity: 0;
-    transition: opacity .5s ease-in-out;
+    transition: opacity .5s ease-out;
 }
 
 .splash.on {
     opacity: 1;
+}
+
+.splash-logo {
+    width: auto;
+    height: 60px;
 }
 
 .app {
