--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -15,14 +15,14 @@
 }
 
 .socials > a {
-    margin: 0 20px 0 0;
+    margin: 0 10px 0 0;
 }
 
 .socials > a:last-child {
     margin: 0;
 }
 
-@media only screen and (min-width: 540px) {
+@media only screen and (min-width: 720px) {
     .footer {
         display: flex;
         align-items: center;
@@ -32,5 +32,11 @@
 
     .socials {
         margin: 0;
+    }
+}
+
+@media only screen and (min-width: 960px) {
+    .socials > a {
+        margin: 0 20px 0 0;
     }
 }
