--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -29,7 +29,7 @@ html, body {
     background-color: #000;
 }
 
-@keyframes fade-up {
+/* @keyframes fade-up {
     0% {
         opacity: 0;
         transform: translateY(-120px);
@@ -39,7 +39,7 @@ html, body {
         opacity: 1;
         transform: translateY(0px);
     }
-}
+} */
 
 .splash {
     position: fixed;
@@ -98,11 +98,11 @@ p {
     padding: 20% 0;
     display: flex;
     align-items: center;
-    opacity: 1;
+    /* opacity: 1;
     transform: translateY(0px);
     animation-name: fade-up;
     animation-duration: 1s;
-    animation-timing-function: cubic-bezier(0,.5,0,1);
+    animation-timing-function: cubic-bezier(0,.5,0,1); */
 }
 
 @media only screen and (min-width: 640px) {
