--- a/src/css/about.css
+++ b/src/css/about.css
@@ -1,39 +1,39 @@
 .about {
-    display: block;
+	display: block;
 }
 
 .about-img {
-    width: 100%;
-    height: auto;
-    margin: 60px 0 0;
-    padding-top: 100%;
-    background-image: url('../assets/me.jpg');
-    background-size: cover;
+	width: 100%;
+	height: auto;
+	margin: 60px 0 0;
+	padding-top: 100%;
+	/* background-image: url('../assets/me.jpg'); */
+	background-size: cover;
 }
 
 .about-text {
-    width: 100%;
-    height: auto;
-    margin: 60px 0 0;
+	width: 100%;
+	height: auto;
+	margin: 60px 0 0;
 }
 
 .about-text > h2 {
-    margin: 0 0 20px;
+	margin: 0 0 20px;
 }
 
 @media only screen and (min-width: 720px) {
-    .about {
-        display: flex;
-    }
+	.about {
+		display: flex;
+	}
 
-    .about-img {
-        width: calc(33.33% - 40px);
-        margin: 100px 80px 0 0;
-        padding-top: calc(33.33% - 40px);
-    }
+	.about-img {
+		width: calc(33.33% - 40px);
+		margin: 100px 80px 0 0;
+		padding-top: calc(33.33% - 40px);
+	}
 
-    .about-text {
-        width: calc(66.66% - 40px);
-        margin: 100px 0 0;
-    }
+	.about-text {
+		width: calc(66.66% - 40px);
+		margin: 100px 0 0;
+	}
 }
