--- a/src/css/casestudy.css
+++ b/src/css/casestudy.css
@@ -1,67 +1,31 @@
-.casestudies {
-	width: 100%;
-	height: auto;
-	margin: 80px 0 0;
-}
-
-.casestudies-group {
-	width: 100%;
-	height: auto;
-	margin: 0 0 80px;
-	display: grid;
-	grid-template-columns: repeat(6, 1fr);
-	grid-column-gap: 40px;
-	grid-row-gap: 60px;
-}
-
-.casestudy {
-	height: auto;
-}
-
-.casestudy:nth-child(-n+3) {
+.card:nth-child(-n+3) {
 	grid-column-end: span 6;
 }
 
-.casestudy:nth-child(n+3) {
+.card:nth-child(n+3) {
 	grid-column-end: span 6;
-}
-
-.casestudy-thumbnail {
-	width: 100%;
-	height: auto;
-	padding-top: 100%;
-	margin: 0 0 20px;
-	background-color: #1A1A1A;
-}
-
-.casestudy-thumbnail > img {
-	width: 100%;
-	height: 100%;
-	position: absolute;
-	top: 0;
-	left: 0;
 }
 
 @media only screen and (min-width: 640px) {
-	.casestudy:nth-child(-n+3) {
+	.card:nth-child(-n+3) {
 		grid-column-end: span 3;
 	}
 	
-	.casestudy:nth-child(n+3) {
+	.card:nth-child(n+3) {
 		grid-column-end: span 3;
 	}
 
-	.casestudy-thumbnail {
+	.card-thumbnail {
 		margin: 0 0 30px;
 	}
 }
 
 @media only screen and (min-width: 960px) {
-	.casestudy:nth-child(-n+3) {
+	.card:nth-child(-n+3) {
 		grid-column-end: span 3;
 	}
 
-	.casestudy:nth-child(n+3) {
+	.card:nth-child(n+3) {
 		grid-column-end: span 2;
 	}
 }
