--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,33 +1,37 @@
 .header {
-    width: 100%;
-    height: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+	width: 100%;
+	height: 30px;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
 }
 
 .logo {
-    width: auto;
-    height: 30px;
+	width: auto;
+	height: 30px;
 }
 
 .nav {
-    width: auto;
-    height: auto;
-    display: flex;
+	width: auto;
+	height: auto;
+	display: flex;
 }
 
 .nav-item {
-    width: auto;
-    height: auto;
-    margin: 0 0 0 20px;
-    font-size: 20px;
-    font-weight: 600;
+	width: auto;
+	height: auto;
+	margin: 0 0 0 20px;
+	font-size: 20px;
+	font-weight: 600;
 }
 
 @media only screen and (min-width: 640px) {
-    .nav-item {
-        margin: 0 0 0 30px;
-        font-size: 24px;
-    }
+	.logo {
+		height: 36px;
+	}
+
+	.nav-item {
+		margin: 0 0 0 30px;
+		font-size: 24px;
+	}
 }
