--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -1,134 +1,125 @@
 html, body, div, h1, h2, h3, p, img, a {
-    position: relative;
+	position: relative;
 
-    outline: 0;
-    border: 0;
-    border-collapse: collapse;
-    border-spacing: 0;
-    margin: 0;
-    padding: 0;
+	outline: 0;
+	border: 0;
+	border-collapse: collapse;
+	border-spacing: 0;
+	margin: 0;
+	padding: 0;
 
-    box-sizing: border-box;
+	box-sizing: border-box;
 
-    appearance: none;
+	appearance: none;
 
-    font-family: 'HK Grotesk';
-    font-weight: 400;
-    text-decoration: none;
+	font-family: 'HK Grotesk';
+	font-weight: 400;
+	text-decoration: none;
 
-    background-color: transparent;
-    color: #FFF;
+	background-color: transparent;
+	color: #FFF;
 
-    display: block;
-    z-index: 0;
+	background-size: cover;
+	background-position: 50%;
+
+	display: block;
+	z-index: 0;
 }
 
 html, body {
-    width: 100%;
-    height: 100%;
-    background-color: #000;
+	width: 100%;
+	height: 100%;
+	background-color: #000;
 }
 
-/* @keyframes fade-up {
-    0% {
-        opacity: 0;
-        transform: translateY(-120px);
-    }
-
-    100% {
-        opacity: 1;
-        transform: translateY(0px);
-    }
-} */
-
 .splash {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #000;
-    z-index: 10;
-    opacity: 0;
-    transition: opacity .5s ease-out;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: #000;
+	z-index: 10;
+	opacity: 0;
+	transition: opacity .5s ease-out;
 }
 
 .splash.on {
-    opacity: 1;
+	opacity: 1;
 }
 
 .splash-logo {
-    width: auto;
-    height: 60px;
+	width: auto;
+	height: 60px;
 }
 
 .app {
-    max-width: 1310px;
-    margin: 0 auto;
-    padding: 30px;
+	max-width: 1310px;
+	margin: 0 auto;
+	padding: 30px;
 }
 
 h1 {
-    font-size: 48px;
-    font-weight: 600;
-    line-height: 1.3;
+	font-size: 48px;
+	font-weight: 600;
+	line-height: 1.3;
 }
 
 h2 {
-    font-size: 20px;
-    font-weight: 600;
+	font-size: 20px;
+	font-weight: 600;
 }
 
 h3 {
-    font-size: 20px;
-    font-weight: 400;
+	font-size: 20px;
+	font-weight: 400;
 }
 
 p {
-    font-size: 20px;
-    font-weight: 400;
-    line-height: 1.75;
+	font-size: 20px;
+	font-weight: 400;
+	line-height: 1.75;
 }
 
 .hero {
-    max-width: 85%;
-    height: auto;
-    padding: 20% 0;
-    display: flex;
-    align-items: center;
-    /* opacity: 1;
-    transform: translateY(0px);
-    animation-name: fade-up;
-    animation-duration: 1s;
-    animation-timing-function: cubic-bezier(0,.5,0,1); */
+	max-width: 85%;
+	height: auto;
+	padding: 20% 0;
+	display: flex;
+	align-items: center;
+	/* opacity: 1;
+	transform: translateY(0px);
+	animation-name: fade-up;
+	animation-duration: 1s;
+	animation-timing-function: cubic-bezier(0,.5,0,1); */
 }
 
 @media only screen and (min-width: 640px) {
-    .app {
-        padding: 60px;
-    }
+	.app {
+		padding: 60px;
+	}
 
-    .hero {
-        max-width: 75%;
-    }
+	.hero {
+		max-width: 75%;
+	}
 
-    h1 {
-        font-size: 64px;
-    }
+	h1 {
+		font-size: 64px;
+	}
 
-    h2 {
-        font-size: 24px;
-        font-weight: 600;
-    }
-    
-    h3 {
-        font-size: 24px;
-    }
-    
-    p {
-        font-size: 24px;
-    }
+	h2 {
+		font-size: 24px;
+		font-weight: 600;
+	}
+	
+	h3 {
+		font-size: 24px;
+	}
+	
+	p {
+		font-size: 24px;
+	}
 }
