--- a/src/css/about.css
+++ b/src/css/about.css
@@ -5,7 +5,7 @@
 .about-img {
 	width: 100%;
 	height: auto;
-	margin: 60px 0 0;
+	margin: 0 0 60px;
 	padding-top: 100%;
 	/* background-image: url('../assets/me.jpg'); */
 	background-size: cover;
@@ -14,26 +14,24 @@
 .about-text {
 	width: 100%;
 	height: auto;
-	margin: 60px 0 0;
 }
 
 .about-text > h2 {
 	margin: 0 0 20px;
 }
 
-@media only screen and (min-width: 720px) {
+@media only screen and (min-width: 960px) {
 	.about {
 		display: flex;
 	}
 
 	.about-img {
-		width: calc(33.33% - 40px);
-		margin: 100px 80px 0 0;
-		padding-top: calc(33.33% - 40px);
+		flex: 33.33% 0 0;
+		margin: 0 80px 0 0;
+		padding-top: 33.33%;
 	}
 
 	.about-text {
-		width: calc(66.66% - 40px);
-		margin: 100px 0 0;
+		flex: 66.66% 0 1;
 	}
 }
