--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,6 +1,7 @@
 .header {
-	width: 100%;
-	height: 30px;
+	max-width: 1310px;
+	margin: 0 auto;
+	padding: 30px 30px 0;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
@@ -26,6 +27,10 @@
 }
 
 @media only screen and (min-width: 640px) {
+	.header {
+		padding: 60px 60px 0;
+	}
+	
 	.logo {
 		height: 36px;
 	}
