--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -29,7 +29,7 @@ html, body, div, h1, h2, h3, p, img, a {
 
 html, body {
 	width: 100%;
-	height: 100%;
+	height: auto;
 	background-color: #000;
 }
 
@@ -92,8 +92,8 @@ p {
 .hero {
 	max-width: 85%;
 	height: auto;
-	padding: 20% 0;
-	margin: -60px 0 0;
+	padding: 18% 0;
+	margin: -30px 0 0;
 	display: flex;
 	align-items: center;
 	/* opacity: 1;
@@ -110,7 +110,7 @@ p {
 
 	.hero {
 		max-width: 75%;
-		margin: -100px 0 0;
+		margin: -80px 0 0;
 	}
 
 	h1 {
