--- a/src/css/casestudy.css
+++ b/src/css/casestudy.css
@@ -1,3 +1,53 @@
+.casestudy > .content {
+	padding: 40px 40px 0;
+}
+
+.casestudy-hero {
+	width: 100%;
+	height: 180px;
+	margin: 90px 0 0;
+	background-color: #1A1A1A;
+}
+
+.casestudy-title {
+	font-size: 28px;
+	font-weight: 600;
+}
+
+.casestudy-subtitle {
+	margin: 5px 0 0;
+}
+
+.casestudy-content {
+	margin: 40px 0 0;
+}
+
+.casestudy-section {
+	width: 100%;
+	height: auto;
+	margin: 0 0 40px 0;
+}
+
+.casestudy-section-title {
+	margin: 0 0 10px;
+}
+
+.p {
+	margin: 0 0 20px;
+}
+
+.p > .a {
+	display: inline;
+	font-weight: 600;
+	font-size: 18px;
+}
+
+.img {
+	width: 100%;
+	height: auto;
+	margin: 60px 0 40px;
+}
+
 .card:nth-child(-n+3) {
 	grid-column-end: span 6;
 }
@@ -5,8 +55,36 @@
 .card:nth-child(n+3) {
 	grid-column-end: span 6;
 }
-
 @media only screen and (min-width: 640px) {
+	.casestudy-hero {
+		height: 420px;
+		margin: 116px 0 0;
+		background-color: #1A1A1A;
+	}
+
+	.casestudy-content {
+		margin: 40px 0 0;
+	}
+
+	.casestudy-title {
+		font-size: 36px;
+	}
+
+	.casestudy-section {
+		width: 100%;
+		height: auto;
+		margin: 0 0 60px 0;
+	}
+	.p > .a {
+		font-size: 20px;
+	}
+
+	.img {
+		width: 100%;
+		height: auto;
+		margin: 80px 0 60px;
+	}
+
 	.card:nth-child(-n+3) {
 		grid-column-end: span 3;
 	}
