--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,7 +1,19 @@
 .header {
-	max-width: 1310px;
+	width: 100%;
+	height: auto;
+	padding: 30px 0;
+	background-color: #000;
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 1;
+}
+
+.header-content {
+	max-width: 1100px;
+	height: auto;
 	margin: 0 auto;
-	padding: 30px 30px 0;
+	padding: 0 30px;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
@@ -28,7 +40,11 @@
 
 @media only screen and (min-width: 640px) {
 	.header {
-		padding: 60px 60px 0;
+		padding: 40px 0;
+	}
+
+	.header-content {
+		padding: 0 40px;
 	}
 	
 	.logo {
