--- a/src/css/casestudy.css
+++ b/src/css/casestudy.css
@@ -45,7 +45,7 @@
 .img {
 	width: 100%;
 	height: auto;
-	margin: 60px 0 40px;
+	margin: 40px 0;
 }
 
 .card:nth-child(-n+3) {
@@ -57,7 +57,7 @@
 }
 @media only screen and (min-width: 640px) {
 	.casestudy > .content {
-		padding: 30px 30px 0;
+		padding: 40px 30px 0;
 	}
 
 	.casestudy-hero {
@@ -77,12 +77,6 @@
 	}
 	.p > .a {
 		font-size: 20px;
-	}
-
-	.img {
-		width: 100%;
-		height: auto;
-		margin: 80px 0 60px;
 	}
 
 	.card:nth-child(-n+3) {
