--- a/src/css/casestudy.css
+++ b/src/css/casestudy.css
@@ -12,10 +12,11 @@
 .casestudy-title {
 	font-size: 28px;
 	font-weight: 600;
+	margin: 10px 0 0;
 }
 
 .casestudy-subtitle {
-	margin: 5px 0 0;
+	margin: 10px 0 0;
 }
 
 .casestudy-content {
@@ -55,6 +56,11 @@
 .card:nth-child(n+3) {
 	grid-column-end: span 6;
 }
+
+.card > h2 {
+	margin: 0 0 5px;
+}
+
 @media only screen and (min-width: 640px) {
 	.casestudy > .content {
 		padding: 40px 30px 0;
@@ -66,6 +72,10 @@
 		background-color: #1A1A1A;
 	}
 
+	.casestudy-content {
+		margin: 60px 0 0;
+	}
+
 	.casestudy-title {
 		font-size: 36px;
 	}
@@ -73,7 +83,7 @@
 	.casestudy-section {
 		width: 100%;
 		height: auto;
-		margin: 0 0 30px 0;
+		margin: 0 0 60px 0;
 	}
 	.p > .a {
 		font-size: 20px;
@@ -89,6 +99,10 @@
 
 	.card-thumbnail {
 		margin: 0 0 30px;
+	}
+
+	.img {
+		margin: 60px 0;
 	}
 }
 
