--- a/src/css/font.css
+++ b/src/css/font.css
@@ -24,20 +24,20 @@
 		url("../fonts/Inter-Regular.woff") format("woff");
 }
 
-/* @font-face {
+@font-face {
 	font-family: 'Inter';
 	font-style:  normal;
 	font-weight: 500;
 	src: url("../fonts/Inter-Medium.woff2") format("woff2"),
 		url("../fonts/Inter-Medium.woff") format("woff");
-} */
-
+}
+/* 
 @font-face {
 	font-family: 'Inter';
 	font-style:  normal;
 	font-weight: 600;
 	src: url("../fonts/Inter-SemiBold.woff2") format("woff2"),
 		url("../fonts/Inter-SemiBold.woff") format("woff");
-}
+} */
 
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,500');
