--- a/src/css/about.css
+++ b/src/css/about.css
@@ -1,37 +1,32 @@
 .about {
-	display: block;
+	display: flex;
+	flex-wrap: wrap;
 }
 
 .about-img {
-	flex: 100% 0 0;
-	height: auto;
-	margin: 0 0 60px;
-	padding-top: 100%;
-	/* background-image: url('../assets/me.jpg'); */
-	background-size: cover;
+	flex: 0 0 100%;
+	margin: 0 64px 48px 0;
 }
 
-.about-text {
-	flex: 100% 0 0;
-	height: auto;
+.about-img > img {
+	width: 100%;
 }
 
 .about-text > h2 {
 	margin: 0 0 20px;
 }
 
-@media only screen and (min-width: 960px) {
+.about-text > p {
+	margin: 0 0 18px;
+}
+
+@media only screen and (min-width: 640px) {
 	.about {
-		display: flex;
+		flex-wrap: nowrap;
 	}
 
 	.about-img {
-		flex: 25% 0 0;
-		margin: 0 60px 0 0;
-		padding-top: 25%;
-	}
-
-	.about-text {
-		flex: 75% 0 1;
+		flex: 0 0 30%;
+		margin: 0 64px 0 0;
 	}
 }
