--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -75,7 +75,7 @@ h1 {
 }
 
 h2 {
-	font-size: 32px;
+	font-size: 24px;
 	font-weight: 500;
 }
 
@@ -103,6 +103,7 @@ p {
 	animation-timing-function: cubic-bezier(0,.5,0,1); */
 }
 
+
 @media only screen and (min-width: 640px) {
 	.content {
 		padding: 132px 30px 0;
@@ -114,6 +115,11 @@ p {
 
 	h1 {
 		font-size: 64px;
+	}
+
+	h2 {
+		font-size: 24px;
+		font-weight: 500;
 	}
 	
 	h3 {
